--- a/HACK-7.0-CODEFEST-2025.html
+++ b/HACK-7.0-CODEFEST-2025.html
@@ -246,7 +246,7 @@
 
         <p>Full event details and prizes will be unveiled on <strong>Nov 24, 2025</strong>.</p>
         <div class="row">
-          <a class="btn" href="http://hackuniversity-registration.vercel.app/">In-Person Session - Register (OneStopForm)</a>
+          <a class="btn" href="https://events.mlh.io/events/13391-codefest-edition-2025-session-b-marketing-business-finance-and-ai?ajs_uid=018c1cf5-cc77-25cb-dc61-8780e39a8673&utm_campaign=OHQ+-+Organizer+-+Event+Published&utm_content=Event+Published&utm_medium=Email&utm_source=Customer.io">In-Person Session - Register with MLH</a>
         </div>
         <p style="font-size:.9rem;color:var(--muted);margin-top:6px;">Perks require Hack University Participant registration (One-Stop-Form).</p>
       </article>
