--- a/HACK-7.0-CODEFEST-2025.html
+++ b/HACK-7.0-CODEFEST-2025.html
@@ -174,7 +174,7 @@
     <p class="text-xs sm:text-sm text-gray-500 mb-2">
       <a href="https://hackuniversity.vercel.app" class="underline hover:no-underline">Hack University</a>
       <span aria-hidden="true"> / </span>
-      <a href="https://hackuniversity-hackathons.vercel.app" class="underline hover:no-underline">Hackathons</a>
+      <a href="https://hackuniversity-hackathons.vercel.app" class="underline hover:no-underline">Business Venture Arena Competition & Hackathon </a>
       <span aria-hidden="true"> / </span>
       CodeFest 2025
     </p>
@@ -188,7 +188,7 @@
     </p>
 
     <p class="mt-2 text-gray-600 max-w-2xl">
-      A problem-solving competition with Tech (coding/development) and Technopreneurship (no-code business pitch) tracks.
+      Business Venture Arena Competition & Hackathon | Two competitions, one event.
     </p>
 
 <!-- THEME INSERT -->
