--- a/hackuniversity-hackwinners.html
+++ b/hackuniversity-hackwinners.html
@@ -252,17 +252,22 @@ table student winners */
       </p>
 
       <div class="portal-grid">
-        <a class="portal-btn" href="#">
-          <span>🏆 SummerCodeX — Summer 2025</span>
+
+
+        <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-305nov2025-sa.html">
+          <span>💪 305 Hackathon Edition Nov'25 Session A  (Online/Synchronous) — Fall 2025</span>
           <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small>
         </a>
 
-        <a class="portal-btn" href="#">
-          <span>🏆 305 Hackathon Edition — Fall 2025</span>
-          <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small>
+        <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-305nov2025-sb.html">
+          <span>⚡ 305 Hackathon Edition Nov'25 Session B (In-Person) — Fall 2025</span>
+          <small>Winners & Student Volunteer Certificates</small>
         </a>
 
-        <a class="portal-btn" href="#">
+
+
+
+        <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-empowher2025-sa.html">
           <span>💪 EmpowHer Hackathon 2025 Session A (Online/Synchronous) — Fall 2025</span>
           <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small>
         </a>
@@ -271,6 +276,18 @@ table student winners */
           <span>⚡ EmpowHer Hackathon 2025 Session B (In-Person) — Fall 2025</span>
           <small>Winners & Student Volunteer Certificates</small>
         </a>
+
+
+        <a class="portal-btn" href="#">
+          <span>🏆 305 Hackathon Edition — Sep 2025</span>
+          <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small>
+        </a>
+
+        <a class="portal-btn" href="#">
+          <span>🏆 SummerCodeX — Summer 2025</span>
+          <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small>
+        </a>
+
       </div>
 
       <div class="portal-note">
