--- a/hackuniversity-hackwinners.html
+++ b/hackuniversity-hackwinners.html
@@ -256,7 +256,7 @@ table student winners */
 
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-305nov2025-sa.html">
           <span>💪 305 Hackathon Edition Nov'25 Session A  (Online/Synchronous) — Fall 2025</span>
-          <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small>
+          <small>Winners & Student Volunteer Certificates</small>
         </a>
 
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-305nov2025-sb.html">
@@ -269,7 +269,8 @@ table student winners */
 
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-empowher2025-sa.html">
           <span>💪 EmpowHer Hackathon 2025 Session A (Online/Synchronous) — Fall 2025</span>
-          <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small>
+          <small>Winners & Student Volunteer Certificates</small>
+          <!-- <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small> -->
         </a>
 
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-empowher2025-sb.html">
