--- a/hackuniversity-hackwinners.html
+++ b/hackuniversity-hackwinners.html
@@ -324,6 +324,132 @@ table student winners */
             <!-- EXAMPLE ROWS — replace / extend with real data -->
 
           <tbody>
+
+              <!-- ============================== -->
+  <!-- MOST RECENT: 305 Hackathon Nov 2025 — Session B (In-Person) -->
+  <tr>
+    <td>305 Hackathon: Edition Nov 2025 — Session B (In-Person)</td>
+    <td>Nov 15, 2025</td>
+    <td>Florida Atlantic University</td>
+    <td>Luciano Scarpaci</td>
+    <td>VetNavigator</td>
+    <td><span class="badge-position">First Place</span></td>
+    <td><span class="badge-track">Track #2 — Tech Unicorn Challenge Winner</span></td>
+  </tr>
+  <tr>
+    <td>305 Hackathon: Edition Nov 2025 — Session B (In-Person)</td>
+    <td>Nov 15, 2025</td>
+    <td>Florida International University</td>
+    <td>Quoc Trung</td>
+    <td>Herotory</td>
+    <td><span class="badge-position">First Place</span></td>
+    <td><span class="badge-track">Track #1 — General Track Winner</span></td>
+  </tr>
+  <tr>
+    <td>305 Hackathon: Edition Nov 2025 — Session B (In-Person)</td>
+    <td>Nov 15, 2025</td>
+    <td>Florida International University</td>
+    <td>Ela Cingir</td>
+    <td>Herotory</td>
+    <td><span class="badge-position">First Place</span></td>
+    <td><span class="badge-track">Track #1 — General Track Winner</span></td>
+  </tr>
+  <tr>
+    <td>305 Hackathon: Edition Nov 2025 — Session B (In-Person)</td>
+    <td>Nov 15, 2025</td>
+    <td>Florida International University</td>
+    <td>Daniela Cianca</td>
+    <td>Herotory</td>
+    <td><span class="badge-position">First Place</span></td>
+    <td><span class="badge-track">Track #1 — General Track Winner</span></td>
+  </tr>
+  <tr>
+    <td>305 Hackathon: Edition Nov 2025 — Session B (In-Person)</td>
+    <td>Nov 15, 2025</td>
+    <td>Florida International University</td>
+    <td>Christian Huanambal</td>
+    <td>Herotory</td>
+    <td><span class="badge-position">First Place</span></td>
+    <td><span class="badge-track">Track #1 — General Track Winner</span></td>
+  </tr>
+  <tr>
+    <td>305 Hackathon: Edition Nov 2025 — Session B (In-Person)</td>
+    <td>Nov 15, 2025</td>
+    <td>Florida Atlantic University</td>
+    <td>Francesca Dumary</td>
+    <td>HawkEye</td>
+    <td><span class="badge-position">Special Award</span></td>
+    <td><span class="badge-track">Most Innovative Project — Track #1 General Track</span></td>
+  </tr>
+  <tr>
+    <td>305 Hackathon: Edition Nov 2025 — Session B (In-Person)</td>
+    <td>Nov 15, 2025</td>
+    <td>Florida International University</td>
+    <td>Emily Vargas</td>
+    <td>HawkEye</td>
+    <td><span class="badge-position">Special Award</span></td>
+    <td><span class="badge-track">Most Innovative Project — Track #1 General Track</span></td>
+  </tr>
+  <tr>
+    <td>305 Hackathon: Edition Nov 2025 — Session B (In-Person)</td>
+    <td>Nov 15, 2025</td>
+    <td>Florida International University</td>
+    <td>Cassandra St Fleur</td>
+    <td>VetSecure</td>
+    <td><span class="badge-position">Special Award</span></td>
+    <td><span class="badge-track">First-Time Hacker Award</span></td>
+  </tr>
+
+  <!-- ============================== -->
+  <!-- NEXT: 305 Hackathon Nov 2025 — Session A (Online/Synchronous) -->
+  <tr>
+    <td>305 Hackathon: Edition Nov 2025 — Session A (Online/Synchronous)</td>
+    <td>Nov 7–15, 2025</td>
+    <td>Sri Krishna Adithya College of Arts &amp; Science (SKACAS)</td>
+    <td>Gokula Krishnan S</td>
+    <td>MindTrack AI: Smart Defense Wellness System</td>
+    <td><span class="badge-position">First Place</span></td>
+    <td><span class="badge-track">Track #2 — Tech Unicorn Challenge Winner</span></td>
+  </tr>
+  <tr>
+    <td>305 Hackathon: Edition Nov 2025 — Session A (Online/Synchronous)</td>
+    <td>Nov 7–15, 2025</td>
+    <td>Sri Krishna Adithya College of Arts &amp; Science (SKACAS)</td>
+    <td>Joelkingsley G</td>
+    <td>MindTrack AI: Smart Defense Wellness System</td>
+    <td><span class="badge-position">First Place</span></td>
+    <td><span class="badge-track">Track #2 — Tech Unicorn Challenge Winner</span></td>
+  </tr>
+  <tr>
+    <td>305 Hackathon: Edition Nov 2025 — Session A (Online/Synchronous)</td>
+    <td>Nov 7–15, 2025</td>
+    <td>Not Provided</td>
+    <td>Hafiz Muhammad Ibrahim Ali</td>
+    <td>Milspec-translator</td>
+    <td><span class="badge-position">First Place</span></td>
+    <td><span class="badge-track">Track #1 — General Track Winner &amp; Best Use of Gemini</span></td>
+  </tr>
+  <tr>
+    <td>305 Hackathon: Edition Nov 2025 — Session A (Online/Synchronous)</td>
+    <td>Nov 7–15, 2025</td>
+    <td>Not Provided</td>
+    <td>Areeba Nawaz</td>
+    <td>Milspec-translator</td>
+    <td><span class="badge-position">First Place</span></td>
+    <td><span class="badge-track">Track #1 — General Track Winner &amp; Best Use of Gemini</span></td>
+  </tr>
+
+
+
+
+
+
+
+
+
+
+
+
             <tr>
               <td>EmpowHer Online Hackathon 2025 – Session B (In-Person)</td>
               <td>Oct 18, 2025</td>
