--- a/HACK-7.0-CODEFEST-2025 copy.html
+++ b/HACK-7.0-CODEFEST-2025 copy.html
@@ -229,7 +229,7 @@
         <p>Kickoff Nov 28 and build through Dec 6 with mentor hours, checkpoints, and async support.</p>
         <p>Full event details and prizes will be unveiled on <strong>Nov 27, 2025</strong>.</p>
         <div class="row">
-          <a class="btn" href="https://codecrunchglobal.vercel.app/HACK-7.1-CodeFest25-sa.html">Online Session Details</a>
+          <a class="btn" href="http://hackuniversity-registration.vercel.app/">Online Session - Register (OneStopForm)</a>
         </div>
         <p style="font-size:.9rem;color:var(--muted);margin-top:6px;">Perks require Hack University Participant registration (One-Stop-Form).</p>
       </article>
