--- a/HACK-7.1-CodeFest25-sa.html
+++ b/HACK-7.1-CodeFest25-sa.html
@@ -228,8 +228,9 @@
           <li>Submission window and live demos (Dec 6)</li>
         </ul>
         <div class="row" style="margin-top:10px">
-          <a class="btn" href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener">Register (OneStopForm)</a>
-          <a class="btn alt" href="https://hackuniversity-calendar.vercel.app/" target="_blank" rel="noopener">Add to Calendar</a>
+          <a class="btn" href="#" data-url="onestop" target="_blank" rel="noopener">Register (OneStopForm)</a>
+          <a class="btn alt" href="#" data-url="agenda" target="_blank" rel="noopener">Add to Calendar</a>
+          <a class="btn" href="#" data-url="agenda" target="_blank" rel="noopener">Agenda</a>
         </div>
         <p style="font-size:.9rem;color:var(--muted);margin-top:6px;">
           Participant subscriptions/APIs, perks, etc. require registration with the OneStopForm (use your Gmail account).
@@ -262,31 +263,31 @@
         <h1><strong>Registration Steps – Session A</strong></h1>
         <ol class="list2">
           <li>
-            RSVP on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">
+            RSVP on <strong><a href="#" data-url="bevyTicket" target="_blank" rel="noopener noreferrer" class="arrow-link">
               Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
           </li>
           <li>
-            Register on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">
+            Register on <strong><a href="#" data-url="onestop" target="_blank" rel="noopener noreferrer" class="arrow-link">
               OneStopForm <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for tools/perks
           </li>
           <li>
-            Register on <strong><a href="https://codefesthack2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">
+            Register on <strong><a href="#" data-url="devpost" target="_blank" rel="noopener noreferrer" class="arrow-link">
               Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for submissions
           </li>
           <li>
-            Join <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">
+            Join <strong><a href="#" data-url="discordServer" target="_blank" rel="noopener noreferrer" class="arrow-link">
               Code Crunch Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (check mentorship channels &amp; schedules)
           </li>
           <li>
-            Read <strong><a href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener noreferrer" class="arrow-link">
+            Read <strong><a href="#" data-url="hackerGuide" target="_blank" rel="noopener noreferrer" class="arrow-link">
               Hacker Guide &amp; Toolkit <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
           </li>
           <li>
-            Read <strong><a href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="arrow-link">
+            Read <strong><a href="#" data-url="agenda" target="_blank" rel="noopener noreferrer" class="arrow-link">
               Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
           </li>
           <li>
-            Create your <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">
+            Create your <strong><a href="#" data-url="githubNew" target="_blank" rel="noopener noreferrer" class="arrow-link">
               GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
           </li>
           <li>
@@ -299,40 +300,64 @@
         <h1><strong>Check-in Steps – Session A</strong></h1>
         <ol class="list2">
           <li>
-            Check in with your ticket on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">
+            Check in with your ticket on <strong><a href="#" data-url="bevyTicket" target="_blank" rel="noopener noreferrer" class="arrow-link">
               Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
           </li>
           <li>
-            Complete the <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLScI6FtLI59QtWqzngkwa0ja4IOszrYdFLdPmOYmG-Ltb-dpJA/viewform?usp=dialog"
+            Complete the <strong><a href="#" data-url="checkinForm"
               target="_blank" rel="noopener noreferrer" class="arrow-link">
               Check-in Form <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
           </li>
           <li>
-            Add team members (if any) on <strong><a href="https://codefesthack2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">
+            Add team members (if any) on <strong><a href="#" data-url="devpost" target="_blank" rel="noopener noreferrer" class="arrow-link">
               Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (edits allowed before deadline)
           </li>
           <li>
-            Create a <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">
+            Create a <strong><a href="#" data-url="githubNew" target="_blank" rel="noopener noreferrer" class="arrow-link">
               PUBLIC GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
           </li>
           <li>
-            Check mentorship channels &amp; schedules on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">
-              Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+            Check mentorship channels &amp; schedules on <strong>Discord</strong>.
+            <div style="font-size:0.88rem;color:#4b5563;margin-top:2px;">
+              You must already have access to the Code Crunch Discord server to view these channels.
+              The links below do <strong>not</strong> provide an invitation if you’re not already a member; they only provide direct access
+              for members who are already in the server.
+            </div>
+            <ul style="margin-top:4px;margin-left:18px;list-style-type:disc;font-size:0.88rem;color:#374151;">
+              <li>
+                Mentorship Q&amp;A channel: <strong>❓｜ask-hack-mentors</strong> —
+                <a href="#" data-url="discordMentorAsk" target="_blank" rel="noopener noreferrer" class="arrow-link">
+                  Open channel <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </li>
+              <li>
+                Schedules &amp; availability: <strong>📅｜mentor-schedules</strong> —
+                <a href="#" data-url="discordMentorSchedule" target="_blank" rel="noopener noreferrer" class="arrow-link">
+                  View schedules <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </li>
+              <li>
+                Mentorship voice room #1: <strong>🌴┃Mentorship 1</strong> —
+                <a href="#" data-url="discordMentorVoice1" target="_blank" rel="noopener noreferrer" class="arrow-link">
+                  Join voice room <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </li>
+            </ul>
           </li>
           <li>
-            Attend workshops (see <strong><a href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing"
+            Attend workshops (see <strong><a href="#" data-url="agenda"
               target="_blank" rel="noopener noreferrer" class="arrow-link">
               agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
           </li>
           <li>
-            Submit your project (see <strong><a href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing"
+            Submit your project (see <strong><a href="#" data-url="agenda"
               target="_blank" rel="noopener noreferrer" class="arrow-link">
               agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
           </li>
           <li>
             View the Live Demos Presentation Order (see
-            <strong><a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing" target="_blank" rel="noopener noreferrer">
-              List <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+            <strong><a href="#" data-url="demosList" target="_blank" rel="noopener noreferrer" class="arrow-link">
+              List <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> ) at the end of the agenda, which becomes available after the submission deadline.
           </li>
         </ol>
       </div>
@@ -347,11 +372,31 @@
           <li>Devpost (submissions)</li>
         </ul>
         <div class="row" style="margin-top:10px">
-          <a class="btn alt" href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener">Agenda</a>
-          <a class="btn" href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener">Hacker Guide</a>
-          <a class="btn alt" href="https://hackuniversitydiscordverify.vercel.app/" target="_blank" rel="noopener">Discord Mentorship Channels</a>
-          <a class="btn" href="https://hackuniversity-perks.vercel.app/" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
-          <a class="btn alt" href="https://codefesthack2025sa.devpost.com/" target="_blank" rel="noopener">Devpost</a>
+          <!-- <a class="btn alt" href="#" data-url="agenda" target="_blank" rel="noopener">Agenda</a> -->
+          <a class="btn" href="#" data-url="hackerGuide" target="_blank" rel="noopener">Hacker Guide</a>
+          <!-- <a class="btn alt" href="#" data-url="discordVerify" target="_blank" rel="noopener">Discord Mentorship Channels</a> -->
+          <a class="btn" href="#" data-url="perks" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
+          <a class="btn alt" href="#" data-url="devpost" target="_blank" rel="noopener">Devpost</a>
+        </div>
+      </div>
+
+      <!-- Community Platforms Card -->
+      <div class="card">
+        <h1><strong>Community Platforms</strong></h1>
+        <p class="meta" style="margin-bottom:6px;">
+          Stay connected with Code Crunch &amp; Hack University across platforms for announcements, reminders, and ongoing support.
+        </p>
+        <div class="row" style="margin-top:8px;">
+          <a class="btn" href="https://hackuniversityplatforms.vercel.app/" data-url="discordServer" target="_blank" rel="noopener">
+            <i class="fab fa-discord"></i>&nbsp; Join Discord
+          </a>
+          <!-- TODO: Replace Instagram & GroupMe hrefs with your real links -->
+          <a class="btn alt" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener">
+            <i class="fab fa-instagram"></i>&nbsp; Instagram
+          </a>
+          <a class="btn alt" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener">
+            <i class="fa-solid fa-users"></i>&nbsp; GroupMe
+          </a>
         </div>
       </div>
     </div>
@@ -388,41 +433,37 @@
 
           <p style="font-size:0.88rem;color:#6b7280;margin-top:4px;">
             Deliverables: README, short demo video, and a live link or screenshots.
-            Read the <a href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener" class="arrow-link">
+            Read the <a href="#" data-url="hackerGuide" target="_blank" rel="noopener" class="arrow-link">
               Hacker Guide <i class="fa-solid fa-arrow-up-right-from-square"></i></a> for full detailed instructions and requirements.
           </p>
         </div>
 
+        <!-- Track #2 -->
+        <div class="card" style="border-style:dashed">
+          <strong>Venture Arena (Pitch) [Track #2 — Business Venture Arena Competition]</strong>
+          <p>
+            Design a no-code startup, program, or business venture that solves a real marketing, business, or finance
+            problem using strategy, research, and AI-enabled insights. Clearly define your customer, validate your problem,
+            build a value proposition, and outline a realistic business model along with a launch and growth plan.
+          </p>
 
-      <!-- Track #2 -->
-      <div class="card" style="border-style:dashed">
-        <strong>Venture Arena (Pitch) [Track #2 — Business Venture Arena Competition]</strong>
-        <p>
-          Design a no-code startup, program, or business venture that solves a real marketing, business, or finance
-          problem using strategy, research, and AI-enabled insights. Clearly define your customer, validate your problem,
-          build a value proposition, and outline a realistic business model along with a launch and growth plan.
-        </p>
+          <!-- Added Prompts -->
+          <ul style="font-size:0.88rem; margin-top:6px; color:#374151; padding-left:18px; list-style:disc;">
+            <li>Pitch a marketing-tech or AI-driven growth startup that helps brands acquire, engage, or retain customers more efficiently.</li>
+            <li>Design a business consulting venture that uses AI tools to help small businesses improve operations, finances, or branding.</li>
+            <li>Create a financial literacy or personal finance education platform targeted at students, families, or underserved communities.</li>
+            <li>Propose a marketplace or service connecting creators, freelancers, students, or niche communities to new opportunities.</li>
+            <li>Build a data-driven business idea solving gaps in customer research, consumer behavior, engagement analytics, or retention.</li>
+            <li>Pitch a subscription-based venture offering curated AI tools, business templates, workshops, or coaching programs.</li>
+            <li>Design a scalable startup leveraging partnerships with schools, nonprofits, brands, tech communities, or enterprises.</li>
+          </ul>
 
-        <!-- Added Prompts -->
-        <ul style="font-size:0.88rem; margin-top:6px; color:#374151; padding-left:18px; list-style:disc;">
-          <li>Pitch a marketing-tech or AI-driven growth startup that helps brands acquire, engage, or retain customers more efficiently.</li>
-          <li>Design a business consulting venture that uses AI tools to help small businesses improve operations, finances, or branding.</li>
-          <li>Create a financial literacy or personal finance education platform targeted at students, families, or underserved communities.</li>
-          <li>Propose a marketplace or service connecting creators, freelancers, students, or niche communities to new opportunities.</li>
-          <li>Build a data-driven business idea solving gaps in customer research, consumer behavior, engagement analytics, or retention.</li>
-          <li>Pitch a subscription-based venture offering curated AI tools, business templates, workshops, or coaching programs.</li>
-          <li>Design a scalable startup leveraging partnerships with schools, nonprofits, brands, tech communities, or enterprises.</li>
-        </ul>
-
-        <p style="font-size:0.88rem;color:#6b7280;margin-top:4px;">
-          Deliverables: Pitch deck, short video, and a brief executive summary.
-          Read the <a href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener" class="arrow-link">
-            Hacker Guide <i class="fa-solid fa-arrow-up-right-from-square"></i></a> for full detailed instructions and requirements.
-        </p>
-      </div>
-
-
-
+          <p style="font-size:0.88rem;color:#6b7280;margin-top:4px;">
+            Deliverables: Pitch deck, short video, and a brief executive summary.
+            Read the <a href="#" data-url="hackerGuide" target="_blank" rel="noopener" class="arrow-link">
+              Hacker Guide <i class="fa-solid fa-arrow-up-right-from-square"></i></a> for full detailed instructions and requirements.
+          </p>
+        </div>
       </div>
     </div>
   </section>
@@ -482,8 +523,10 @@
         <li>For the most accurate and recent information, always check Devpost.</li>
       </ul>
       <p class="meta">
-        Devpost will show the confirmed names, titles, organization affiliations, and event designations (Judge, Mentor, Speaker) for each volunteer.
+        Devpost will show the confirmed names, titles, organization affiliations, and event designations (Judge, Mentor, Speaker) for each volunteer
+        before the live demos at the closing ceremony.
       </p>
+
     </div>
   </section>
 
@@ -679,7 +722,28 @@
 </footer>
 
 <script>
+  // Global URL object (single source of truth)
+  const URLS = {
+    bevyTicket: 'https://gdg.community.dev/e/m9z9h4/',
+    onestop: 'http://hackuniversity-registration.vercel.app/',
+    devpost: 'https://codefesthack2025sa.devpost.com/',
+    hackerGuide: 'https://hackuniversity-hackerguide.vercel.app',
+    agenda: 'https://docs.google.com/document/d/1yhE4eLuzLrEJQMHhpF7CTIwLznHUVUPiBqsYgYctfYY/edit?usp=drive_link',
+    githubNew: 'https://github.com/new',
+    checkinForm: 'https://hackuniversityattendance.vercel.app/',
+    demosList: 'https://docs.google.com/document/d/1yhE4eLuzLrEJQMHhpF7CTIwLznHUVUPiBqsYgYctfYY/edit?usp=drive_link',
+    perks: 'https://hackuniversity-perks.vercel.app/',
+    discordVerify: 'https://hackuniversitydiscordverify.vercel.app/',
+    // Hub for joining/landing on Code Crunch / Hack University Discord
+    discordServer: 'https://hackuniversity-discord.vercel.app/',
+    // Mentorship channels (require existing server access)
+    discordMentorAsk: 'https://discord.com/channels/1280306702201389107/1373797661232332940',
+    discordMentorSchedule: 'https://discord.com/channels/1280306702201389107/1416559999064477717',
+    discordMentorVoice1: 'https://discord.com/channels/1280306702201389107/1328166712800968756'
+  };
+
   (function () {
+    // Click animation on footer / quick links
     const els = document.querySelectorAll('.hack-university-social-link, .hack-university-quick-link, .hack-university-footer-link');
     els.forEach(el => {
       el.addEventListener('click', function () {
@@ -693,6 +757,24 @@
       document.querySelectorAll('.hack-university-star').forEach(el => { el.style.animation = 'none'; });
     }
   })();
+
+  // Use URLS + auto-year
+  document.addEventListener('DOMContentLoaded', function () {
+    // Attach hrefs from URLS object
+    document.querySelectorAll('[data-url]').forEach(function (el) {
+      const key = el.getAttribute('data-url');
+      if (URLS[key]) {
+        el.setAttribute('href', URLS[key]);
+      }
+    });
+
+    // Auto-update year in footer
+    const yearEl = document.querySelector('.hack-university-copyright');
+    if (yearEl) {
+      const year = new Date().getFullYear();
+      yearEl.textContent = yearEl.textContent.replace(/© \d{4}/, '© ' + year);
+    }
+  });
 </script>
 </body>
 </html>
