--- a/HACK-7.1-CodeFest25-sa.html
+++ b/HACK-7.1-CodeFest25-sa.html
@@ -222,8 +222,9 @@
           <span><i class="fa-regular fa-clock"></i> Continuous build</span>
           <span><i class="fa-solid fa-globe"></i> Online/Synchronous</span>
         </div>
+        <p>Plan for:</p>
         <ul class="list">
-          <li>Kickoff stream and team formation (Nov 28)</li>
+          <li>Check-in + kickoff stream and team formation (Nov 28 10:00 PM ET)</li>
           <li>Mentor hours and mid-sprint checkpoints</li>
           <li>Submission window and live demos (Dec 6)</li>
         </ul>
@@ -377,6 +378,9 @@
           <!-- <a class="btn alt" href="#" data-url="discordVerify" target="_blank" rel="noopener">Discord Mentorship Channels</a> -->
           <a class="btn" href="#" data-url="perks" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
           <a class="btn alt" href="#" data-url="devpost" target="_blank" rel="noopener">Devpost</a>
+            <a class="btn alt" href="#" data-url="photoAlbum" target="_blank" rel="noopener">
+          <i class="fa-regular fa-images"></i>&nbsp; Photo Album
+        </a>
         </div>
       </div>
 
@@ -621,18 +625,18 @@
           </a>
 
           <!-- Blackbox.ai -->
-          <a href="https://blackbox.ai" target="_blank" rel="noopener">
+          <!-- <a href="https://blackbox.ai" target="_blank" rel="noopener">
             <img src="https://github.com/user-attachments/assets/0af9e9c0-3f3f-42f7-8fd9-66a39b5051d2"
                  alt="Blackbox AI"
                  class="partner-logo">
-          </a>
+          </a> -->
 
           <!-- Major League Hacking (MLH) -->
-          <a href="https://mlh.io" target="_blank" rel="noopener">
+          <!-- <a href="https://mlh.io" target="_blank" rel="noopener">
             <img src="https://github.com/user-attachments/assets/a40c9aa3-5bb2-4ce5-a998-cc4f88959a26"
                  alt="Major League Hacking"
                  class="partner-logo">
-          </a>
+          </a> -->
 
         </div>
       </div>
@@ -739,7 +743,11 @@
     // Mentorship channels (require existing server access)
     discordMentorAsk: 'https://discord.com/channels/1280306702201389107/1373797661232332940',
     discordMentorSchedule: 'https://discord.com/channels/1280306702201389107/1416559999064477717',
-    discordMentorVoice1: 'https://discord.com/channels/1280306702201389107/1328166712800968756'
+    discordMentorVoice1: 'https://discord.com/channels/1280306702201389107/1328166712800968756',
+    
+    
+    // 👉 New photo album link
+    photoAlbum: 'https://docs.google.com/document/d/1n1Jv6b-J8tmW7aFEQdpNGeqHBks_1BaoRLRBGm5X-0M/edit?usp=sharing'
   };
 
   (function () {
