--- a/HACK-7.1-CodeFest25-sa.html
+++ b/HACK-7.1-CodeFest25-sa.html
@@ -373,14 +373,14 @@
           <li>Devpost (submissions)</li>
         </ul>
         <div class="row" style="margin-top:10px">
-          <!-- <a class="btn alt" href="#" data-url="agenda" target="_blank" rel="noopener">Agenda</a> -->
+          <a class="btn alt" href="#" data-url="agenda" target="_blank" rel="noopener">Agenda</a>
           <a class="btn" href="#" data-url="hackerGuide" target="_blank" rel="noopener">Hacker Guide</a>
-          <!-- <a class="btn alt" href="#" data-url="discordVerify" target="_blank" rel="noopener">Discord Mentorship Channels</a> -->
+          <a class="btn alt" href="#" data-url="discordMentorAsk" target="_blank" rel="noopener">Discord Mentorship Q&A channel</a>
           <a class="btn" href="#" data-url="perks" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
           <a class="btn alt" href="#" data-url="devpost" target="_blank" rel="noopener">Devpost</a>
-            <a class="btn alt" href="#" data-url="photoAlbum" target="_blank" rel="noopener">
-          <i class="fa-regular fa-images"></i>&nbsp; Photo Album
-        </a>
+          <a class="btn alt" href="#" data-url="photoAlbum" target="_blank" rel="noopener">
+            <i class="fa-regular fa-images"></i>&nbsp; Photo Album
+          </a>
         </div>
       </div>
 
@@ -728,14 +728,14 @@
 <script>
   // Global URL object (single source of truth)
   const URLS = {
-    bevyTicket: 'https://gdg.community.dev/e/m9z9h4/',
+    bevyTicket: 'https://gdg.community.dev/e/mg8jp2/',
     onestop: 'http://hackuniversity-registration.vercel.app/',
-    devpost: 'https://codefesthack2025sa.devpost.com/',
+    devpost: 'https://codefesthack2025sb.devpost.com/',
     hackerGuide: 'https://hackuniversity-hackerguide.vercel.app',
-    agenda: 'https://docs.google.com/document/d/1yhE4eLuzLrEJQMHhpF7CTIwLznHUVUPiBqsYgYctfYY/edit?usp=drive_link',
+    agenda: 'https://docs.google.com/document/d/1IcnX46Cn8ti7OMUP_4Sqlfi88GSTM1x7-8wW6_5IHCo/edit?usp=sharing',
     githubNew: 'https://github.com/new',
     checkinForm: 'https://hackuniversityattendance.vercel.app/',
-    demosList: 'https://docs.google.com/document/d/1yhE4eLuzLrEJQMHhpF7CTIwLznHUVUPiBqsYgYctfYY/edit?usp=drive_link',
+    demosList: 'https://docs.google.com/document/d/1IcnX46Cn8ti7OMUP_4Sqlfi88GSTM1x7-8wW6_5IHCo/edit?usp=sharing',
     perks: 'https://hackuniversity-perks.vercel.app/',
     discordVerify: 'https://hackuniversitydiscordverify.vercel.app/',
     // Hub for joining/landing on Code Crunch / Hack University Discord
