--- a/HACK-7.2-CodeFest25-sb.html
+++ b/HACK-7.2-CodeFest25-sb.html
@@ -250,7 +250,7 @@
           <li>Live demos and awards during the closing ceremony</li>
         </ul>
         <div class="row" style="margin-top:10px">
-          <a class="btn" href="#" data-url="bevyTicket" target="_blank" rel="noopener">RSVP (Bevy Ticket)</a>
+          <a class="btn" href="#" data-url="MLHTicket" target="_blank" rel="noopener">Register with MLH</a>
           <a class="btn alt" href="#" data-url="agenda" target="_blank" rel="noopener">Add to Calendar</a>
           <a class="btn" href="#" data-url="devpost" target="_blank" rel="noopener">Devpost</a>
         </div>
@@ -816,6 +816,7 @@
 <script>
   // Global URL object (single source of truth) — update links as needed
   const URLS = {
+    MLHTicket: 'https://events.mlh.io/events/13391-codefest-edition-2025-session-b-marketing-business-finance-and-ai?ajs_uid=018c1cf5-cc77-25cb-dc61-8780e39a8673&utm_campaign=OHQ+-+Organizer+-+Event+Published&utm_content=Event+Published&utm_medium=Email&utm_source=Customer.io',   
     bevyTicket: 'https://gdg.community.dev/e/mg8jp2/',                  // TODO: replace with CodeFest Session B Bevy link
     onestop: 'http://hackuniversity-registration.vercel.app/',
     devpost: 'https://codefesthack2025sb.devpost.com/',                // TODO: replace with actual Session B Devpost
